# kairos

./: .cursorrules  .gitignore  LICENSE  README.md  README.tr.md  kairos.key  kairos.key.pub  package-lock.json  package.json
.github/workflows/: release.yml
src/: bundle.js  i18n.json  index.html  main.js  sounds.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
